update all files